# unwanted

./: Agent.cpp  Agent.h  Board.cpp  Board.h  CMakeLists.txt  Card.cpp  Card.h  Cell.cpp  Cell.h  Config.cpp  Config.h  Deck.cpp  Deck.h  GameEngine.cpp  GameEngine.h  GameState.h  GameWindow.h  LICENSE  LoginPage.h  MainWindow.cpp  MainWindow.h  Player.cpp  Player.h  README.md  Types.h  Utils.cpp  Utils.h  cell.cpp  cell.h  config.txt  gamemanager.cpp  gamewindow.cpp  gamewindow.h  loginpage.cpp  main.cpp  mainwindow.ui  player.cpp  player.h  splashscreen.cpp  splashscreen.h  (+2 more)
map1/: 1.txt  2.txt  3.txt  4.txt  5.txt
map2/: 1.txt  2.txt  3.txt  4.txt  5.txt
